Added staff object for comparison in unit test.  STaff fails miserably.  Location still fails too.  With full println() output, this takes 2 sec on AirBook and 15 min on CN3.
git-svn-id: svn://localhost/trunk@522 beccb06a-f8e7-8f45-aa8d-cf513feaadbf